infra/k8s/overlays/bm-cluster/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-thoughty-ingress
  namespace: apps
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - thoughty-server
          - thoughty-web
          - thoughty-server-canary
          - thoughty-web-canary
          - thoughty-cloud-sync-worker
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: infra
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 3001
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: infra
          podSelector:
            matchLabels:
              app: prometheus
      ports:
        - protocol: TCP
          port: 3001
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gitlab-runners
          podSelector:
            matchLabels:
              app: gitlab-ci-job
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 3001
